Locally host demos and writeup.

--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
 <p>We will use this repository to host information and scripts
 to help researchers port their research projects to JavaScript.</p>
 
-<p>A short writeup is available <a href="http://www.cs.berkeley.edu/%7Ejoel/share-research/researchjs.pdf">here</a>.</p>
+<p>A short writeup is available <a href="papers/researchjs.pdf">here</a>.</p>
 
 <h1>
 <a name="demos" class="anchor" href="#demos"><span class="octicon octicon-link"></span></a>Demos</h1>
 
 <ul>
-<li>MiniSat <a href="http://www.cs.berkeley.edu/%7Ejoel/share-research/minisat.html">http://www.cs.berkeley.edu/~joel/share-research/minisat.html</a>
+<li><a href="demos/minisat.html">MiniSat</a>
 </li>
-<li>Boolector <a href="http://www.cs.berkeley.edu/%7Ejoel/share-research/boolector.html">http://www.cs.berkeley.edu/~joel/share-research/boolector.html</a>
+<li><a href="demos/boolector.html">Boolector</a>
 </li>
-<li>Hugs <a href="http://www.cs.berkeley.edu/%7Ejoel/share-research/hugs.html">http://www.cs.berkeley.edu/~joel/share-research/hugs.html</a>
+<li><a href="demos/hugs.html">Hugs</a>
 </li>
 </ul>
       </section>
